--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@mui/styled-engine-sc": "^6.1.5",
+    "bootstrap": "^5.3.3",
+    "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "styled-components": "^6.1.13"
   }
 }
