--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@mui/styled-engine-sc": "^6.1.5",
     "bootstrap": "^5.3.3",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "styled-components": "^6.1.13"
   }
 }
