--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
     "bootstrap": "^5.3.3",
-    "next": "15.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.5",
+    "react-dom": "^19.2.3",
     "styled-components": "^6.1.13"
   }
 }
